using System;
using System.Threading.Tasks;
using Grpc.Core;

namespace NextGenSoftware.OASIS.API.Oracle.Services;

public sealed class CrossChainBridgeService : CrossChainBridge.CrossChainBridgeBase
{
    // private readonly ITransactionService _transactionService;
    // private readonly ITransactionCancelService _cancelService;

    // public CrossChainBridgeService(ITransactionService transactionService, ITransactionCancelService cancelService)
    // {
    //     _transactionService = transactionService;
    //     _cancelService = cancelService;
    // }

    public override async Task<TransactionResponse> BurnTransaction(BurnRequest request, ServerCallContext context)
    {
        try
        {
            // var transactionId = await _transactionService.BurnAsync(
            //     network: request.network,
            //     sourceAddress: request.sourceAddress,
            //     targetAddress: request.targetAddress,
            //     amount: request.amount);

            return new TransactionResponse
            {
                TransactionId = "transactionId",
                Message = "Burn transaction initiated successfully."
            };
        }
        catch (Exception ex)
        {
            return new TransactionResponse
            {
                TransactionId = "",
                Message = $"Error initiating Burn transaction: {ex.Message}"
            };
        }
    }

    public override async Task<TransactionResponse> MintTransaction(MintRequest request, ServerCallContext context)
    {
        try
        {
            // var transactionId = await _transactionService.MintAsync(
            //     network: request.network,
            //     sourceTransactionId: request.sourceTransactionId,
            //     targetAddress: request.targetAddress,
            //     amount: request.amount);

            return new TransactionResponse
            {
                // TransactionId = transactionId,
                Message = "Mint transaction initiated successfully."
            };
        }
        catch (Exception ex)
        {
            return new TransactionResponse
            {
                TransactionId = "",
                Message = $"Error initiating Mint transaction: {ex.Message}"
            };
        }
    }

    public override async Task<StatusResponse> GetTransactionStatus(StatusRequest request, ServerCallContext context)
    {
        try
        {
            // var status = await _transactionService.GetTransactionStatusAsync(request.transactionId);

            return new StatusResponse
            {
                // TransactionId = request.transactionId,
                // Status = status
            };
        }
        catch (Exception ex)
        {
            return new StatusResponse
            {
                // TransactionId = request.transactionId,
                // Status = $"Error: {ex.Message}"
            };
        }
    }

    public override async Task<CancelResponse> CancelTransaction(CancelRequest request, ServerCallContext context)
    {
        try
        {
            // var success = await _cancelService.CancelTransactionAsync(request.transactionId);

            return new CancelResponse
            {
                // TransactionId = request.transactionId,
                // Message = success ? "Transaction cancellation successful." : "Cancellation failed."
            };
        }
        catch (Exception ex)
        {
            return new CancelResponse
            {
                // TransactionId = request.transactionId,
                Message = $"Error cancelling transaction: {ex.Message}"
            };
        }
    }
}
